# bevy_spacetimedb

./: Cargo.toml
bevy_spacetimedb/: Cargo.toml
bevy_spacetimedb/src/: lib.rs  tables.rs
example_app/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
